httpd-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-example
  annotations:
    description: "Exposes and load balances the application pods"
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    name: httpd-example
